one FAT push (fixed bugs galore)

--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -126,15 +126,12 @@
             </div>
         </div>
 
-    <!--Our ORIGIN STORY section-->
+    <!--Our STORY section-->
         <div class="row">
             <div class="column1">
                 <h2>Our Story</h2>
                 <figure>
                     <img src="../assets/img/about/aboutpic3.png" alt="aboutpic3" id="aboutpic3" />
-                    <figcaption>
-                        The team wrapping up our Fall 2019 “Crystalized-themed” Showcase!
-                    </figcaption>
                 </figure>
             </div>
             <div class="column2">
@@ -172,11 +169,18 @@
 </div>
 
     <!-- Footer -->
-    <!-- <footer>
-        <div class="container d-flex justify-content-center align-items-center">
-            <p>Invention Corps 2020</p>
+    <footer id="footer" style="background-color: #CCE5FF; color: #202020;">
+        <div class="footer-icons">
+            <div class="row" style="padding: 0;">
+                <a class="col-3 footer-icon-1" href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a class="col-3 footer-icon-2" href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a class="col-3 footer-icon-3" href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a class="col-3 footer-icon-4" href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
         </div>
-    </footer> -->
+        Made with ♥ by the
+        <span> <a href="webdevteam.html"> Invention Corps Web Team</a> </span>
+    </footer>
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -189,8 +193,5 @@
     <script src="../assets/js/script.js"></script>
     <script src="../assets/js/members.js"></script>
 </body>
-
-<footer style="background-color: #BBDCFF; color: black; padding: 20px; text-align: center; margin-top: 20px;">Made with ♥ by the <span> <a style="color: black" href="webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
-</footer>
 
 </html>
