--- a/v1.5/commcafe15.html
+++ b/v1.5/commcafe15.html
@@ -32,7 +32,7 @@
   <!-- <link rel="stylesheet" href="../assets/css/projectsv15.css" type="text/css" /> -->
   <link rel="stylesheet" href="../assets/css/anindividualproj15.css" type="text/css" />
 <!-- Project specific style sheet -->
-<link rel="stylesheet" href="../assets/css/comcafe.css" type="text/css" /> <!--the stylesheet href-->
+<link rel="stylesheet" href="../assets/css/commcafe.css" type="text/css" /> <!--the stylesheet href-->
 </head>
 
 <body>
@@ -312,8 +312,8 @@
         <h2 class="deliverables-header">Deliverables</h2>
             <div class="container">
                 <p>
-                    PLACEHOLDER
-                </p> <!-- CHANGE to deliverables overview-->
+                    
+                </p> <!--deliverables overview-->
             </div>
 
         <div class="row">
@@ -467,7 +467,7 @@
             </div>
         </div>
         Made with ♥ by the
-        <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team</a> </span>
+        <span> <a href="webdevteam.html"> Invention Corps Web Team</a> </span>
     </footer>
 
 </html>
