--- a/v1.5/concha15.html
+++ b/v1.5/concha15.html
@@ -342,8 +342,8 @@
                         <div class="col-2 col-sm-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-2.svg" class="nums"> </div>
                         <div class="col-10 col-sm-11 hmw">
                             <h7 id="how">
-                                PLACEHOLDER
-                            </h7> <!-- CHANGE to second hmw-->
+                                How might we create an intentional and valuable product interface by utilizing user feedback and identifying usability gains?
+                            </h7> <!--second hmw-->
                         </div>
                     </div>
                     <div class="container">
@@ -396,7 +396,7 @@
             </div>
         </div>
         Made with ♥ by the
-        <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team</a> </span>
+        <span> <a href="webdevteam.html"> Invention Corps Web Team</a> </span>
     </footer>
 
 </html>
