--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -133,7 +133,7 @@
                             <img alt="regina" src="../assets/img/floatingblocks15/regina.svg" class = "member"/> <!-- CHANGE to first team member img-->
                         </div>
                         <div class="team-names">
-                            <h7>Regina Madanguit</h7> <!-- CHANGE to first tea mmember-->
+                            <h7>Regina Madanguit</h7> <!-- CHANGE to first team member-->
                             <p>Project Lead</p>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container d-flex justify-content-center">
-                            <img alt="aryan" src="../assets/img/floatingblocks15/aryan.svg" class = "member"/> <!-- CHANGE to second teamm ember img-->
+                            <img alt="aryan" src="../assets/img/floatingblocks15/aryan.svg" class = "member"/> <!-- CHANGE to second team member img-->
                         </div>
                         <div class="team-names">
                             <h7>Aryan Nair</h7> <!-- CHANGE to second team member-->
@@ -421,7 +421,7 @@
                             a block that supports the whole community. This allows for the block configurations to be easily rearranged as more
                             research and usability testing is conducted.
                         </p>
-                    </div> <!-- CHANGE to content of second deliverable section.
+                    </div> <!-- CHANGE to content of third deliverable section.
                         Use  <p class="p[x]"> for each person who contributed where x is their order in the team section.
                         Use two breaks (<br>) within a paragraph if the same person contributes for more than one paragraph.
                         Use right for even and left for odd deliverable sections.-->
@@ -459,7 +459,7 @@
             </div>
         </div>
         Made with ♥ by the
-        <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team</a> </span>
+        <span> <a href="webdevteam.html"> Invention Corps Web Team</a> </span>
     </footer>
 
 </html>
