--- a/v1.5/hofmann15.html
+++ b/v1.5/hofmann15.html
@@ -382,7 +382,7 @@
                         <p class="p1 right">
                             We put the interview reponses together into short videos and decided to subtitle the videos in English (as a start). 
                         </p>
-                        <p class="p PLACEHOLDER right">
+                        <p class="pspecial right">
                             We also found impactful quotes from the essay about various pieces in the exhibit and recorded our own voices. We decided to use our own voices as we are a group of diverse, young individuals hopefully keeping up to our promise of creating non-intimidating content.
                         </p>
                     </div> <!--content of second deliverable section.
@@ -395,7 +395,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="img-container deliverable-img-container">
-                            <iframe class ="deliverable-img youtube" width="600" height="550" src="https://www.youtube.com/embed/GYRoO9SDkO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <!-- Youtube embedded link-->
+                            <iframe class ="deliverable-img youtube" width="600" height="450" src="https://www.youtube.com/embed/GYRoO9SDkO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <!-- Youtube embedded link-->
                         </div>
                     </div>
                     <div class="col-12">
@@ -403,7 +403,7 @@
                             <audio controls>
                                 <source src="../assets/img/hofmann15/audio.mp3" type="audio/mp3">
                                 <source src="../assets/img/hofmann15/audio.ogg" type="audio/ogg">
-                                <p>Your browser doesn't support HTML5 audio. Here is a <a href="audio.mp3">link to the audio</a> instead.</p>
+                                <p>Your browser doesn't support HTML5 audio. Here is a <a href="https://bampfa.now.sh/artworks/agrigento">link to the audio</a> instead.</p>
                             </audio>
                         </div>
                     </div>
