--- a/v1.5/netic15.html
+++ b/v1.5/netic15.html
@@ -495,7 +495,7 @@
                             aspect of the app to incentive people to keep up with their at home workouts. 
                         </p>
 
-                        <p class="p PLACEHOLDER right">
+                        <p class="pspecial right">
                             In the end, we were able to create a working Figma prototype
                             that properly encompasses all the different aspects that were
                             envisioned by Netic Health; including a new company logo,
@@ -553,7 +553,7 @@
             </div>
         </div>
         Made with ♥ by the
-        <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team</a> </span>
+        <span> <a href="webdevteam.html"> Invention Corps Web Team</a> </span>
     </footer>
 
 </html>
