--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -316,9 +316,19 @@
         </div>
     </div>
 
-<!-- Footer -->
-<footer style="background-color: #CCE5FF; color: black; padding: 20px; text-align: center; margin-top: 20px;">Made with ♥ by the <span> <a style="color: black" href="webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
- </footer>
+    <!-- Footer -->
+    <footer id="footer" style="background-color: #CCE5FF; color: #202020;">
+        <div class="footer-icons">
+            <div class="row" style="padding: 0;">
+                <a class="col-3 footer-icon-1" href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a class="col-3 footer-icon-2" href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a class="col-3 footer-icon-3" href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a class="col-3 footer-icon-4" href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+        Made with ♥ by the
+        <span> <a href="webdevteam.html"> Invention Corps Web Team</a> </span>
+    </footer>
 
 </body>
 
