--- a/v1.5/thrive15.html
+++ b/v1.5/thrive15.html
@@ -260,7 +260,7 @@
                 <div id=underline1></div>
             </div>
             <p>
-            <a href="PLACEHOLDER" target="_blank" class="partner-link">Thrive Networks</a> operates on the ground in Cambodia,
+            <a href="https://thrivenetworks.org/" target="_blank" class="partner-link">Thrive Networks</a> operates on the ground in Cambodia,
             Laos and Vietnam in the interest of underserved populations.
             For nearly thirty years, they have leveraged public and private resources to engage
             with evidence-based programs proven to work at the local level to organically and
@@ -473,7 +473,7 @@
                     <img class="delivtitle" src="../assets/img/thrive15/deliv-title-4.svg"> <!-- deliverable title 4 img-->
                 </div>
                     <div class="row">
-                        <div class="col-2 col-sm-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-3.svg" class="nums"> </div>
+                        <div class="col-2 col-sm-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-4.svg" class="nums"> </div>
                         <div class="col-10 col-sm-11 hmw">
                             <h7 id="how">
                                 How might we create sustainable water franchises in partnership with female entrepreneurs?
@@ -530,7 +530,7 @@
             </div>
         </div>
         Made with ♥ by the
-        <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team</a> </span>
+        <span> <a href="webdevteam.html"> Invention Corps Web Team</a> </span>
     </footer>
 
 </html>
