--- a/v1.5/webdevteam.html
+++ b/v1.5/webdevteam.html
@@ -74,7 +74,7 @@
                             </div>
                         </div>
                         <p class = "name"> Neha Dabke</p>
-                        <p class = "role"> Developement Lead + Content <br> nehadabke@berkeley.edu</p>
+                        <p class = "role"> Development Lead + Content <br> nehadabke@berkeley.edu</p>
                     </div>
                     <div class = "col-6 col-sm-5th">
                         <div class="dot red">
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <p class = "name"> Bongi Fleischer </p>
-                        <p class = "role"> Developement + Content <br> ceo@icb.berkeley.edu</p>
+                        <p class = "role"> Development + Content <br> ceo@icb.berkeley.edu</p>
                     </div>
                     <div class = "col-6 col-sm-5th">
                         <div class="dot yellow">
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                         <p class = "name"> Courtnie Chan </p>
-                        <p class = "role"> Developement <br> courtnie@berkeley.edu</p>
+                        <p class = "role"> Development <br> courtnie@berkeley.edu</p>
                     </div>
                     <div class = "col-6 col-sm-5th">
                         <div class="dot blank">
@@ -163,7 +163,7 @@
                             </div>
                         </div>
                         <p class = "name"> Anika Singhania </p>
-                        <p class = "role"> Developement + Content <br> anikasinghania@berkeley.edu</p>
+                        <p class = "role"> Development + Content <br> anikasinghania@berkeley.edu</p>
                     </div>
                     <div class = "col-6 col-sm-5th">
                         <div class="dot green">
@@ -177,13 +177,13 @@
                     </div>
                     <div class = "col-6 col-sm-5th">
                         <div class="dot blue">
-                            <div class = "quote">iris's quote 2.0</div>
+                            <div class = "quote">iris' quote 2.0</div>
                             <div class = "img-container">
                                 <img alt="iris" src="../assets/img/members/iris2.png" class = "member"/>
                             </div>
                         </div>
                         <p class = "name"> Iris Hou </p>
-                        <p class = "role"> Developement + Design <br> ihou@berkeley.edu</p>
+                        <p class = "role"> Dev + Design + Content <br> ihou@berkeley.edu</p>
                     </div>
                     <div class = "col-6 col-sm-5th">
                         <div class="dot blue">
