--- a/v1.5/alemany15.html
+++ b/v1.5/alemany15.html
@@ -499,7 +499,7 @@
         </div>
     </div>
     Made with ♥ by the
-    <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team</a> </span>
+    <span> <a href="webdevteam.html"> Invention Corps Web Team</a> </span>
 </footer>
 
 </html>
