--- a/v1.5/makerspace15.html
+++ b/v1.5/makerspace15.html
@@ -265,7 +265,7 @@
                 <div id=underline1></div>
             </div>
             <p>
-                <a href="https://give.lib.berkeley.edu/ccl" target="_blank" class="partner-link">UC Berkeley’s Moffitt Library Makerspace,</a>
+                <a href="https://give.lib.berkeley.edu/ccl" target="_blank" class="partner-link">UC Berkeley’s Moffitt Library Makerspace</a>
                 was established in 2016 by the Student Technology Fund and
                 the b. Makerspace student design club. Its main purpose is to provide core makerspace activities at the lowest
                 entry-level possible. The Moffitt Makerspace currently offers free workshops and access to 3D printer, vinyl cutters,
@@ -513,7 +513,7 @@
         </div>
     </div>
     Made with ♥ by the
-    <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team</a> </span>
+    <span> <a href="webdevteam.html"> Invention Corps Web Team</a> </span>
 </footer>
 
 </html>
