hans hofmann/nature of appstraction is finally complete

--- a/v1.5/hofmann15.html
+++ b/v1.5/hofmann15.html
@@ -443,12 +443,20 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6 order-lg-6 d-flex justify-content-center">
-                <div classs="img-container deliverable-img-container">
+                <div class="img-container deliverable-img-container">
                     <img src="../assets/img/hofmann15/deliv-3.png" class="deliverable-img"> <!--third deliverable img-->
                 </div>
             </div>
 
         </div>
+            <div class="container" style="text-align: center; padding: 3rem 0 0.8rem 0;">
+                <h7>Art has a way of keeping things alive.</h7>
+                <br>
+                <p>Our team recreating a picture taken of Hans Hofmann teaching a class at Berkeley.</p>
+            </div>
+            <div class="container d-flex justify-content-center">
+                <img src="../assets/img/hofmann15/group-pic.png" style="width: 60vw; margin-bottom: 5rem;">
+            </div>
     </div>
 
     <!-- Bootstrap Scripts -->
