finally finished concha

--- a/v1.5/concha15.html
+++ b/v1.5/concha15.html
@@ -221,7 +221,7 @@
                 <div id=underline1></div>
             </div>
             <p>
-            <a href="https://www.conchalabs.com/#/" target="_blank" class="partner-link">Concha Labs</a> builds customized hearings aids that cost a fraction of the price of traditional devices. To calibrate the devices, users are taken through a series of hearing tests on a web app. Our team was tasked with redesigning the calibration interface to make it more accessible for people of all ages and abilities.
+            <a href="https://www.conchalabs.com/#/" target="_blank" class="partner-link">Concha Labs</a> builds customized hearing aids that cost a fraction of the price of traditional devices. To calibrate the devices, users are taken through a series of hearing tests on a web app. Our team was tasked with redesigning the calibration interface to make it more accessible for people of all ages and abilities.
             </p> <!--partner txt -->
 
             <div class="sectionheader">
@@ -256,7 +256,7 @@
                         </div>
                         <div class="col-10 col-sm-11 question">
                             <h7 id="how">
-                                A clear and intuitive workflow with intuitive design that is easy to use and to follow.
+                                A clear workflow with intuitive design and a navigable UI/UX that is easy to use and to follow.
                             </h7> <!--first user need-->
                         </div>
 
@@ -279,8 +279,8 @@
         <h2 class="deliverables-header">Deliverables</h2>
             <div class="container">
                 <p>
-                    PLACEHOLDER
-                </p> <!-- CHANGE to deliverables overview-->
+                    We strove to understand the pain points of an existing fringe user group through research and testing, which drove our design flow of a web application to accompany Concha’s specialized hearing aids. Through intensive usability testing, we utilized user feedback to create an overall more accessible and functional interface that allows users to create a personalized sound profile, specific to their needs. 
+                </p> <!--deliverables overview-->
             </div>
 
         <div class="row">
@@ -293,8 +293,8 @@
                         <div class="col-2 col-sm-1 hmw d-flex justify-content-center"> <img src="../assets/img/number-1.svg" class="nums"> </div>
                         <div class="col-10 col-sm-11 hmw">
                             <h7 id="how">
-                                PLACEHOLDER
-                            </h7> <!-- CHANGE to first hmw-->
+                                How might we better understand what drives the needs of our users, and how can we create the best experience for our specific user group?
+                            </h7> <!--first hmw-->
                         </div>
                     </div>
                     <div class="container">
