--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -211,7 +211,7 @@
                 </div>
                 <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
-                        <a href="../v1.5/about.html">
+                        <a href="../v1.5/visualize15.html">
                             <img src="../assets/img/projthumbnails/visualize.svg" class="project-tile" alt="Visualize in Ghana" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                         </a>
                         <br>
@@ -283,7 +283,7 @@
                 </div>
                 <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
-                        <a href="../v1.5/about.html">
+                        <a href="../v1.5/catheter15.html">
                             <img src="../assets/img/projthumbnails/catheter.svg" class="project-tile" alt="Brain-Saving Catheter" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                         </a>
                         <br>
