--- a/v1.5/hofmann15.html
+++ b/v1.5/hofmann15.html
@@ -355,7 +355,7 @@
             </div>
             <div class="col-12 col-lg-6 order-lg-2 d-flex justify-content-center">
                 <div class="img-container deliverable-img-container">
-                    <img src="../assets/img/hofmann15/deliv-1.png" class="deliverable-img"> <!--first deliverable img-->
+                    <img src="../assets/img/hofmann15/deliv-1.png" class="deliverable-img small"> <!--first deliverable img-->
                 </div>
             </div>
         
@@ -444,7 +444,7 @@
             </div>
             <div class="col-12 col-lg-6 order-lg-6 d-flex justify-content-center">
                 <div class="img-container deliverable-img-container">
-                    <img src="../assets/img/hofmann15/deliv-3.png" class="deliverable-img"> <!--third deliverable img-->
+                    <img src="../assets/img/hofmann15/deliv-3.png" class="deliverable-img small"> <!--third deliverable img-->
                 </div>
             </div>
 
@@ -454,8 +454,8 @@
                 <br>
                 <p>Our team recreating a picture taken of Hans Hofmann teaching a class at Berkeley.</p>
             </div>
-            <div class="container d-flex justify-content-center">
-                <img src="../assets/img/hofmann15/group-pic.png" style="width: 60vw; margin-bottom: 5rem;">
+            <div class="img-container deliverable-img-container">
+                <img src="../assets/img/hofmann15/group-pic.png" class = "deliverable-img">
             </div>
     </div>
 
