--- a/v1.5/makerspace15.html
+++ b/v1.5/makerspace15.html
@@ -387,7 +387,7 @@
             </div>
             <div class="col-12 col-lg-6 order-lg-2 d-flex justify-content-center">
                 <div class="img-container deliverable-img-container">
-                    <img src="../assets/img/makerspace15/deliv-1.png" class="deliverable-img">
+                    <img src="../assets/img/makerspace15/deliv-1.png" class="deliverable-img small">
                     <!-- CHANGE to first deliverable img-->
                 </div>
             </div>
@@ -430,7 +430,7 @@
             <div class="col-12 col-lg-6 order-lg-3 d-flex justify-content-center">
                 <div class="img-container deliverable-img-container">
                     <div class="container">
-                        <img src="../assets/img/makerspace15/deliv-2.png" class="deliverable-img">
+                        <img src="../assets/img/makerspace15/deliv-2.png" class="deliverable-img small">
                         <!-- CHANGE to second deliverable img-->
                     </div>
                 </div>
@@ -472,7 +472,7 @@
             </div>
             <div class="col-12 col-lg-6 order-lg-6 d-flex justify-content-center">
                 <div classs="img-container deliverable-img-container">
-                    <img src="../assets/img/makerspace15/deliv-3.png" class="deliverable-img">
+                    <img src="../assets/img/makerspace15/deliv-3.png" class="deliverable-img small">
                     <!-- CHANGE to third deliverable img-->
                 </div>
             </div>
