safari fixing multicolored borders

--- a/v1.5/netic15.html
+++ b/v1.5/netic15.html
@@ -494,16 +494,17 @@
                             that is struggling we wanted to hone in on the gamification
                             aspect of the app to incentive people to keep up with their at home workouts. 
                         </p>
-
-                        <p class="pspecial right">
-                            In the end, we were able to create a working Figma prototype
-                            that properly encompasses all the different aspects that were
-                            envisioned by Netic Health; including a new company logo,
-                            name and slogan, a mission statement, and a fully designed mobile application
-                            with features such as connecting to a PT, a way to track information,
-                            a "gamified" social connection, and a way for people to easily utilize the machine
-                            learning technology developed by the company.
-                        </p>
+                        <div class="special">
+                            <p class="pspecial right">
+                                In the end, we were able to create a working Figma prototype
+                                that properly encompasses all the different aspects that were
+                                envisioned by Netic Health; including a new company logo,
+                                name and slogan, a mission statement, and a fully designed mobile application
+                                with features such as connecting to a PT, a way to track information,
+                                a "gamified" social connection, and a way for people to easily utilize the machine
+                                learning technology developed by the company.
+                            </p>
+                        </div>
                     </div> <!-- Content of second deliverable section.
                         Use  <p class="p[x]"> for each person who contributed where x is their order in the team section.
                         Use two breaks (<br>) within a paragraph if the same person contributes for more than one paragraph.
