deliverable image sizing

--- a/v1.5/hofmann15.html
+++ b/v1.5/hofmann15.html
@@ -454,8 +454,8 @@
                 <br>
                 <p>Our team recreating a picture taken of Hans Hofmann teaching a class at Berkeley.</p>
             </div>
-            <div class="img-container deliverable-img-container">
-                <img src="../assets/img/hofmann15/group-pic.png" class = "deliverable-img">
+            <div class="img-container deliverable-img-container bottom">
+                <img src="../assets/img/hofmann15/group-pic.png" class = "deliverable-img no-top">
             </div>
     </div>
 
